--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,9 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
     implementation "com.fazecast:jSerialComm:1.3.10"
-
-//    implementation("com.pi4j:pi4j-library:2.1.1")
-//    implementation("com.pi4j:pi4j-gpio-extension:1.3")
-//    implementation("com.pi4j:pi4j-device:1.3")
-
-    implementation ("javax.servlet:servlet-api:2.5")
+//    implementation ("javax.servlet:servlet-api:2.5")
     
 
 }
